<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- TODO use an grid adapter!!! -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_transaction"
            android:gravity="center"
            android:textSize="25sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/std_text_edit_spacing">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item_name"
                android:textSize="@dimen/std_menu_text_size"
                android:textStyle="bold"
                android:gravity="center" />

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:ellipsize="end"
                android:paddingBottom="@dimen/std_text_edit_spacing"
                android:paddingStart="@dimen/std_text_edit_spacing"
                android:paddingEnd="@dimen/std_text_edit_spacing"
                android:paddingTop="@dimen/std_text_edit_spacing">
            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="@dimen/std_text_edit_spacing"> <!-- yeah, I know... it's better
                                        practice to use a grid adapter here -->

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/amount"
                android:textSize="@dimen/std_menu_text_size"
                android:textStyle="bold"
                android:gravity="center" />
        
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:paddingBottom="@dimen/std_text_edit_spacing"
                    android:paddingStart="48dp"
                    android:paddingEnd="@dimen/std_text_edit_spacing"
                    android:paddingTop="@dimen/std_text_edit_spacing" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/std_text_edit_spacing"
                    android:text="@string/dollar_sign"
                    android:textSize="@dimen/std_menu_text_size"
                    tools:ignore="RtlSymmetry" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/std_text_edit_spacing">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textSize="@dimen/std_menu_text_size"
                android:textStyle="bold"
                android:gravity="center" />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:inputType="text"
                    android:ellipsize="end"
                    android:paddingBottom="@dimen/std_text_edit_spacing"
                    android:paddingStart="@dimen/std_text_edit_spacing"
                    android:paddingEnd="@dimen/std_text_edit_spacing"
                    android:paddingTop="@dimen/std_text_edit_spacing" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/pinpointLocationBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/std_text_edit_spacing"
                    android:contentDescription="@string/map_exact_pinpoint"
                    android:textAppearance="@style/Widget.MaterialComponents.Button"
                    app:icon="@drawable/calculator"
                    tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</GridLayout>