<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/uploadKeyDisplay"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/barcode_options_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/std_text_edit_spacing">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="outline"
                        app:hintTextColor="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/item_name">
                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/std_text_edit_spacing">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/amount"
                        android:textSize="@dimen/std_menu_text_size"
                        android:textStyle="bold"
                        android:gravity="center" />

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_cost_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberDecimal"
                            android:paddingBottom="@dimen/std_text_edit_spacing"
                            android:paddingStart="48dp"
                            android:paddingEnd="@dimen/std_text_edit_spacing"
                            android:paddingTop="@dimen/std_text_edit_spacing"
                            android:background="@android:color/white"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:textColor="@android:color/black" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="@dimen/std_text_edit_spacing"
                            android:text="@string/dollar_sign"
                            android:textSize="@dimen/std_menu_text_size"
                            android:textColor="@android:color/black"
                            tools:ignore="RtlSymmetry" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/std_text_edit_spacing">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/location"
                        android:textSize="@dimen/std_menu_text_size"
                        android:textStyle="bold"
                        android:gravity="center" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/location_edit"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="9"
                            android:paddingTop="@dimen/std_text_edit_spacing"
                            android:paddingStart="@dimen/std_text_edit_spacing"
                            android:paddingEnd="@dimen/std_text_edit_spacing"
                            android:paddingBottom="@dimen/std_text_edit_spacing"
                            android:inputType="text"
                            android:ellipsize="end"
                            android:background="@android:color/white"
                            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:textColor="@android:color/black" />

                    <ImageView
                            android:id="@+id/pinpoint_location_btn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:src="@drawable/location_pointer"
                            android:background="@android:color/white"
                            android:contentDescription="@string/map_exact_pinpoint"
                            tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.budget.budget.ui.common.CustomMaterialButton
            android:id="@+id/barcode_options_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_left_right_button_margin"
            android:layout_marginEnd="@dimen/full_left_right_button_margin"
            android:text="@string/scan_barcode"
            app:icon="@drawable/report"
            app:iconGravity="textStart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/manual_manage_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <include
            android:id="@+id/manual_manage_bar"
            layout="@layout/transaction_creation_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>